--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
 server.port=8081
+spring.main.banner-mode=off
 spring.jpa.hibernate.ddl-auto=update
+logging.level.root=warn
+logging.level.org.hibernate.SQL=TRACE
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.type.descriptor.sql.BasicExtractor=TRACE
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.database=postgresql
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/javadb
-spring.datasource.username=postgres
-spring.datasource.password=benimSifrem
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=mydb
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
