--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.port=8081
 spring.main.banner-mode=off
 spring.jpa.hibernate.ddl-auto=update
-logging.level.root=warn
-logging.level.org.hibernate.SQL=TRACE
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-#logging.level.org.hibernate.type.descriptor.sql.BasicExtractor=TRACE
-#spring.jpa.show-sql=true
+#logging.level.root=warn
+#Bu sekilde ayarladigin da icerisindeki ? isaretleri yerine degerleri de gormus olursun
+#tabi bu guvenlik acigi demek aslinda sadece hata cozumu icin yapilmali.
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.url=jdbc:h2:mem:testdb
