add jwt bearer token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+springdoc.swagger-ui.path=/swagger-ui.html
 
 application.description=My Spring Application
 application.version=1.0
